tests/neg/extension-with.scala
extension (x: Int) with // error
  def foo = x
