tests/neg/extension-with.check
-- Error: tests/neg/extension-with.scala:1:19 --------------------------------------------------------------------------
1 |extension (x: Int) with // error
  |                   ^^^^
  |                   No `with` expected here.
  |
  |                   An extension clause is simply followed by one or more method definitions.
